--- a/pom.xml
+++ b/pom.xml
@@ -11,18 +11,15 @@
     <groupId>com.service.rest</groupId>
     <artifactId>productRow-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>productRow-service</name>
-    <description>Demo project for Spring Boot</description>
+    <name>product-service</name>
+    <description>product-service</description>
 
     <properties>
         <java.version>11</java.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
